--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.90.12",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
