--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.5",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
+    "moment": "^2.30.1",
     "react": "^19.2.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
