--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,8 @@
     "moment": "^2.30.1",
     "multer": "^2.0.2",
     "nodemon": "^3.1.11",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "socket.io": "^4.8.3"
   },
   "type": "module"
 }
