--- a/api/package.json
+++ b/api/package.json
@@ -2,8 +2,10 @@
   "name": "api",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -21,9 +23,10 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^2.0.2",
-    "nodemon": "^3.1.11",
     "pg": "^8.16.3",
     "socket.io": "^4.8.3"
   },
-  "type": "module"
+  "devDependencies": {
+    "nodemon": "^3.1.11"
+  }
 }
